--- a/header.css
+++ b/header.css
@@ -1,4 +1,5 @@
 .header.flex {
+  justify-content: space-around;
   align-items: center;
   width: 100vw;
   height: auto;
@@ -11,7 +12,7 @@
 
 .logo {
   /* background로 이미지 넣기 */
-  font-size: 30px;
+  font-size: 34px;
   font-weight: 900;
   padding: 14px;
 }
@@ -22,28 +23,50 @@
 }
 
 .header-menu > ul > li {
-  margin-right: 16px;
-  background-color: beige;
-  padding: 10px 16px;
+  margin-right: 20px;
+}
+
+.header-menu > ul > li > a {
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  padding: 12px 24px;
+  border: 3px solid black;
+  border-radius: 10px;
+}
+
+.header-nav.flex {
+  justify-content: center;
+  align-items: center;
 }
 
 .search_icon {
-  /* display: none; */
+  display: none;
   font-size: 22px;
   cursor: pointer;
 }
 
 .search_bar {
+  width: 230px;
+  height: auto;
+  font-size: 16px;
+  letter-spacing: 0.2rem;
+  padding: 10px 20px;
+  border: 3px solid black;
+  border-radius: 14px;
+  margin-right: 8px;
 }
 
 .menu_icon {
-  /* display: none; */
-  font-size: 22px;
+  display: none;
+  font-size: 30px;
   font-weight: 900;
   cursor: pointer;
 }
 
-.chat_Btn {
-  font-size: 16px;
+.login {
+  font-size: 18px;
   font-weight: 900;
+  padding: 10px;
+  border: 3px solid black;
+  border-radius: 20px;
 }
