--- a/header.css
+++ b/header.css
@@ -1,72 +1,103 @@
 .header.flex {
-  justify-content: space-around;
-  align-items: center;
-  width: 100vw;
+  width: 100%;
   height: auto;
-  padding: 20px;
+  flex-direction: column;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 10px 30px 20px;
 }
 
-.header-logo {
-  margin-right: 20px;
+.user-info.flex {
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 4px;
+}
+
+.user-info > div:nth-child(1),
+.user-info > div:nth-child(2) {
+  border-right: 1px solid black;
+}
+
+.sign_in,
+.sign_up,
+.cart {
+  font-size: 0.875rem;
+  font-weight: 900;
+  padding: 0 6px;
+}
+
+.sign_in:hover,
+.sign_up:hover,
+.cart:hover {
+  color: black;
+}
+
+.cart {
+  color: white;
+}
+
+.header-section.flex {
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
   /* background로 이미지 넣기 */
-  font-size: 34px;
+  font-size: 2.1rem;
   font-weight: 900;
-  padding: 14px;
+  letter-spacing: 0.15rem;
 }
 
-.header-menu .flex {
-  justify-content: center;
+.header-menu > ul.flex {
+  justify-content: space-between;
   align-items: center;
 }
 
 .header-menu > ul > li {
-  margin-right: 20px;
+  margin-right: 16px;
+}
+
+.header-menu > ul > li:last-child {
+  margin-right: 0;
 }
 
 .header-menu > ul > li > a {
   font-weight: 700;
   letter-spacing: 0.1rem;
-  padding: 12px 24px;
-  border: 3px solid black;
-  border-radius: 10px;
+  padding: 6px 14px;
+  border: 2px solid black;
+  border-radius: 14px;
 }
 
-.header-nav.flex {
+.header-menu > ul > li > a:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.header-menu .selected {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.hearder-search.flex {
   justify-content: center;
   align-items: center;
 }
 
 .search_icon {
-  display: none;
   font-size: 22px;
   cursor: pointer;
 }
 
 .search_bar {
-  width: 230px;
+  width: 210px;
   height: auto;
-  font-size: 16px;
-  letter-spacing: 0.2rem;
-  padding: 10px 20px;
-  border: 3px solid black;
+  font-size: 0.8rem;
+  color: #ccc;
+  padding: 4px 18px;
+  border: 2px solid black;
   border-radius: 14px;
   margin-right: 8px;
 }
 
-.menu_icon {
-  display: none;
-  font-size: 30px;
-  font-weight: 900;
-  cursor: pointer;
-}
-
-.login {
-  font-size: 18px;
-  font-weight: 900;
-  padding: 10px;
-  border: 3px solid black;
-  border-radius: 20px;
+.search_bar::placeholder {
+  color: #ccc;
 }
