--- a/hair_page/footer.css
+++ b/hair_page/footer.css
@@ -25,16 +25,26 @@
   border-right: 1px solid rgba(0, 0, 0, 0.3);
 }
 
+.download.flex {
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
 .download > .app {
+  width: 30px;
+  height: 30px;
   font-size: 20px;
   color: white;
-  transition: color 200ms ease-in;
+  border-radius: 5px;
+
+  transition: background-color 200ms ease-in;
+}
+
+.download > .app:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .download > .app:nth-child(1) {
   margin-right: 10px;
-}
-
-.download > .app:hover {
-  color: black;
 }
