--- a/signup_page/signup.css
+++ b/signup_page/signup.css
@@ -9,14 +9,14 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
   padding: 20px 0;
   background-color: #fffef1;
 }
 
 input {
   border: 1px solid darkgray;
-  border-radius: 8px;
+  border-radius: 5px;
   padding: 6px 8px;
 }
 
@@ -26,7 +26,7 @@ button {
   border-radius: 8px;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.4);
-  transition: transform 200ms ease-in;
+  transition: all 200ms ease-in;
   cursor: pointer;
 }
 
@@ -46,11 +46,11 @@ a {
 
 #signup_form {
   position: relative;
-  width: 500px;
+  width: 550px;
   height: auto;
   background-color: #fff;
   border: 3px solid rgba(0, 0, 0, 0.6);
-  border-radius: 30px;
+  border-radius: 10px;
   padding: 30px 30px 14px;
   margin-bottom: 12px;
 }
@@ -58,7 +58,7 @@ a {
 #heading {
   font-size: 22px;
   letter-spacing: 0.3rem;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
